classDiagram
    class AnalysisService {
        +call_graph_analyzer CallGraphAnalyzer
        +analyze_local_repository(repo_path, max_files, languages) Dict
        +analyze_repository_full(github_url, include_patterns, exclude_patterns) AnalysisResult
        +analyze_repository_structure_only(github_url, include_patterns, exclude_patterns) Dict
        +cleanup_all()
        -_clone_repository(github_url) str
        -_analyze_structure(repo_dir, include, exclude) Dict
        -_analyze_call_graph(file_tree, repo_dir) Dict
        -_filter_supported_languages(code_files) List
        -_cleanup_repository(temp_dir)
    }

    class RepoAnalyzer {
        +include_patterns List~str~
        +exclude_patterns List~str~
        +analyze_repository_structure(repo_dir) Dict
        -_analyze_multiple_repositories(repo_dirs) Dict
        -_build_file_tree(repo_dir) Dict
        -_should_exclude_path(path, filename) bool
        -_should_include_file(path, filename) bool
        -_count_files(tree) int
        -_calculate_size(tree) float
    }

    class CallGraphAnalyzer {
        +functions Dict~str, Node~
        +call_relationships List~CallRelationship~
        +analyze_code_files(code_files, base_dir) Dict
        +extract_code_files(file_tree) List~Dict~
        +generate_llm_format() Dict
        -_analyze_code_file(repo_dir, file_info)
        -_resolve_call_relationships()
        -_deduplicate_relationships()
        -_generate_visualization_data() Dict
        -_select_most_connected_nodes(target_count)
    }

    AnalysisService --> RepoAnalyzer : uses
    AnalysisService --> CallGraphAnalyzer : owns
    CallGraphAnalyzer ..> LanguageAnalyzers : delegates parsing
